feat: improve IDE integration by exporting compile commands and modernizing DBus dependency handling in CMake.

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -5,6 +5,9 @@ project(goviet-ime)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Export compile_commands.json for IDEs (fixes "file not found" in editors)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 find_package(ECM REQUIRED)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 include(GNUInstallDirs)
@@ -12,7 +15,7 @@ include(GNUInstallDirs)
 find_package(PkgConfig REQUIRED)
 # Add Fcitx5Config component to ensure config headers are loaded
 pkg_check_modules(FCITX5 REQUIRED Fcitx5Core Fcitx5Module Fcitx5Config)
-pkg_check_modules(DBUS REQUIRED dbus-1)
+pkg_check_modules(DBUS REQUIRED IMPORTED_TARGET dbus-1)
 
 set(GOVIET_LIB_NAME "libgo-viet-engine")
 configure_file(goviet.conf.in goviet.conf)
@@ -24,17 +27,16 @@ add_library(go-viet-engine MODULE
 
 target_include_directories(go-viet-engine PRIVATE
     ${FCITX5_INCLUDE_DIRS}
-    ${DBUS_INCLUDE_DIRS}
+    # DBUS headers are now handled by the imported target
 )
 
 target_link_libraries(go-viet-engine
     ${FCITX5_LIBRARIES}
-    ${DBUS_LIBRARIES}
+    PkgConfig::DBUS
 )
 
 target_compile_options(go-viet-engine PRIVATE 
     ${FCITX5_CFLAGS_OTHER} 
-    ${DBUS_CFLAGS_OTHER}
 )
 
 # --- INSTALLATION SECTION ---
